--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_map: 0.10.1+1
-  latlong: ^0.6.1
-  url_launcher: ^5.7.6
-  video_player: ^0.11.1+2
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.0
+  url_launcher: ^6.1.10
+  video_player: ^2.6.0
 
 dev_dependencies:
   flutter_test:
