--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   latlong2: ^0.8.0
   url_launcher: ^6.1.10
   video_player: ^2.6.0
+  ffmpeg_kit_flutter: 5.1.0
+  desktop_drop: ^0.4.1
 
 dev_dependencies:
   flutter_test:
